<resources>
    <string name="app_name">NFCoffee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="manIDs">Manage IDs</string>
    <string name="get_data">Get Data</string>
    <string-array name="country_arrays">
        <item>NFCoffee</item>
    </string-array>
    <string name="title_activity_manage_ids">ManageIDs</string>
    <string name="cancel">Cancel</string>
    <string name="card_id">Card ID</string>
    <string name="code_name">Code Name</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="number_of_coffees">Number of coffees</string>
    <string name="nfc_coffee">NFC Coffee</string>
    <string name="office_dsgmedia_ro">office@dsgmedia.ro</string>
    <string name="logo">Logo</string>
    <string name="read_id">Read ID</string>
    <string name="todo">TODO</string>
    <string name="get_the_data_over_the_tcp_connection">Get the Data over the TCP connection.</string>
    <string name="paste">Paste</string>
    <string name="close">Close</string>

</resources>
