<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="ro.dsgmedia.cox.nfcoffee.EditID">

    <TextView
        android:id="@+id/editID_tvCardID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editID_etCardID"
        android:text="@string/card_id" />

    <EditText
        android:id="@+id/editID_etCardID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <TextView
        android:id="@+id/editID_tvCodeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editID_etCodeName"
        android:text="@string/code_name" />

    <EditText
        android:id="@+id/editID_etCodeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <TextView
        android:id="@+id/editID_tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editID_etName"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editID_etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:maxLines="1" />

    <TextView
        android:id="@+id/editID_tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editID_etEmail"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editID_etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:selectAllOnFocus="true" />

    <TextView
        android:id="@+id/editID_tvCoffees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editID_etCoffees"
        android:text="@string/number_of_coffees" />

    <EditText
        android:id="@+id/editID_etCoffees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/editID_bSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/editID_bCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>
